tests/baselines/reference/symbolProperty17.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty17.ts(3,6): error TS1023: An index signature parameter type must be 'string', 'number', or an enum type.


==== tests/cases/conformance/es6/Symbols/symbolProperty17.ts (1 errors) ====
    interface I {
        [Symbol.iterator]: number;
        [s: symbol]: string;
         ~
!!! error TS1023: An index signature parameter type must be 'string', 'number', or an enum type.
        "__@iterator": string;
    }
    
    var i: I;
    var it = i[Symbol.iterator];